--- a/Exercise4/Ex4.html
+++ b/Exercise4/Ex4.html
@@ -14,14 +14,14 @@
           <p class="colortext" id="myParagraph">This is the text that you can change border and background</P><br>
           <p>Enter the values you want for the Border:</p>
           <form action="/action_page.php">
-          Red value: <input type="text" name="fname" id="Redvalue"><br>
-          Green value: <input type="text" name="fname" id="Greenvalue"><br>
-          Blue value: <input type="text" name="fname" id="Bluevalue"><br>
-          Width: <input type="text" name="fname" id="Boarderwidth"><br>
+          Red value: <input type="text"  id="Redvalue"><br>
+          Green value: <input type="text"  id="Greenvalue"><br>
+          Blue value: <input type="text"  id="Bluevalue"><br>
+          Width: <input type="text"  id="Boarderwidth"><br>
           <p>Enter the values you want for the Background:</p>
-          Red value: <input type="text" name="fname" id="Redvalue1"><br>
-          Green value: <input type="text" name="fname" id="Greenvalue1"><br>
-          Blue value: <input type="text" name="fname" id="Bluevalue1"><br>
+          Red value: <input type="text"  id="Redvalue1"><br>
+          Green value: <input type="text"  id="Greenvalue1"><br>
+          Blue value: <input type="text"  id="Bluevalue1"><br>
         </form>
         <button onclick="colorfunc()">Submit</button>
 
