--- a/Exercise2/MyfirstCSS.html
+++ b/Exercise2/MyfirstCSS.html
@@ -1,10 +1,24 @@
 <html>
 	<head>
-		<title> My first web page </title>
-     <link rel="stylesheet" type="text/css" href="myStyle.css">
+		<title> My first slide show </title>
      <script type="text/javascript"
                  src="MyfirstCSS.js">
          </script>
+         <style>
+           p
+            {
+              background-color: red;
+    	      color: white;
+              font-family: arial;
+              font-size: 22pt;
+             }
+
+           img{
+               width: 500px;
+               height: 500px;
+               border-radius: 500px;
+               }
+           </style>
 	</head>
 
 	<body>
