--- a/Exercise5/Ex5.html
+++ b/Exercise5/Ex5.html
@@ -6,8 +6,9 @@
   <body>
     <p style="color: red"> Below are all the exercises for lab 3:</p>
     <p style="color: red">Exercise 1: </a><a href="https://people.eecs.ku.edu/~a500l206/eecs448/EECS448lab03/Exercise1/PW.html"> Click here to access exercise 1 </a> <br>
-    <p style="color: red">Exercise 2: <a href="https://people.eecs.ku.edu/~a500l206/eecs448/EECS448lab03/Exercise2/MyfirstCSS.html"> Click here to access exercise 2 </a> <br>
-    <p style="color: red">Exercise 3: <a href="https://people.eecs.ku.edu/~a500l206/eecs448/EECS448lab03/Exercise3/myProfile.html"> Click here to access exercise 3 </a> <br>
-    <p style="color: red">Exercise 4: <a href="https://people.eecs.ku.edu/~a500l206/eecs448/EECS448lab03/Exercise4/Ex4.html"> Click here to access exercise 4 </a> <br>
+    <p style="color: red">Exercise 2: <a href="https://people.eecs.ku.edu/~a500l206/eecs448/EECS448lab03/Exercise2/Ex2.html"> Click here to access exercise 2 </a> <br>
+    <p style="color: red">Exercise 3: <a href="https://people.eecs.ku.edu/~a500l206/eecs448/EECS448lab03/Exercise3/MyProfile.html"> Click here to access exercise 3 </a> <br>
+    <p style="color: red">Exercise 4: <a href="https://people.eecs.ku.edu/~a500l206/eecs448/EECS448lab03/Exercise4/Exercise4.html"> Click here to access exercise 4 </a> <br>
+     <a href="https://dumielauxepices.net/wallpaper-3915050"><img class="img img-responsive" typeof="foaf:Image" src="https://dumielauxepices.net/sites/default/files/drawn-red-panda-tiger-566584-3326631.gif" width="150" height="150" alt="Drawn Red Panda tiger 27 - 500 X 281" title="Drawn Red Panda tiger 27 - 500 X 281" /></a>
   </body>
 </html>
